Bug 196719 - [Web GPU] GPURenderPassEncoder updates: setBlendColor, setViewport, setScissorRect
Summary: [Web GPU] GPURenderPassEncoder updates: setBlendColor, setViewport, setScisso...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Justin Fan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2019-04-08 18:21 PDT by Justin Fan
Modified: 2019-04-09 13:04 PDT (History)
9 users (show)

See Also:


Attachments
Patch (16.50 KB, patch)
2019-04-08 18:49 PDT, Justin Fan
no flags Details | Formatted Diff | Diff
Patch for landing (18.72 KB, patch)
2019-04-09 12:07 PDT, Justin Fan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Fan 2019-04-08 18:21:14 PDT
[Web GPU] GPURenderPassEncoder updates: setBlendColor, setViewport, setScissorRect
Comment 1 Justin Fan 2019-04-08 18:49:27 PDT
Created attachment 367009 [details]
Patch
Comment 2 Myles C. Maxfield 2019-04-08 20:27:17 PDT
Comment on attachment 367009 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=367009&action=review

> LayoutTests/webgpu/blend-triangle-strip.html:-57
> -            dstFactor: "one",

Why modify this test? Why didn’t this modification cause a required change in the expected results? Instead of modifying this test, we should make a new test.
Comment 3 Justin Fan 2019-04-09 12:07:43 PDT
Created attachment 367059 [details]
Patch for landing
Comment 4 WebKit Commit Bot 2019-04-09 13:02:33 PDT
The commit-queue encountered the following flaky tests while processing attachment 367059 [details]:

imported/w3c/web-platform-tests/xhr/event-upload-progress.htm bug 196736 (author: youennf@gmail.com)
The commit-queue is continuing to process your patch.
Comment 5 WebKit Commit Bot 2019-04-09 13:03:24 PDT
Comment on attachment 367059 [details]
Patch for landing

Clearing flags on attachment: 367059

Committed r244093: <https://trac.webkit.org/changeset/244093>
Comment 6 WebKit Commit Bot 2019-04-09 13:03:25 PDT
All reviewed patches have been landed.  Closing bug.
Comment 7 Radar WebKit Bug Importer 2019-04-09 13:04:39 PDT
<rdar://problem/49746664>